# autotask-ghl-integration

./: .env.example  .gitignore  CONTRIBUTING.md  Install-Shortcut.ps1  README.md  Start-Interlinked.bat  alembic.ini  autotask-ghl-integration-spec.md  docker-compose.yml  pyproject.toml  start.ps1  stop.ps1
.claude/: settings.json  settings.local.json
config/: classification.yaml  contacts.mapping.yaml  opportunities.mapping.yaml  stage_mapping.yaml
docs/: architecture.md  cutover-checklist.md  fabric-roadmap.md  flow2-setup.md  local-dev.md  portal.md  testing-walkthrough.md
docs/setup/: autotask-api-user.md  azure-resources.md  entra-easy-auth.md  ghl-oauth-app.md  keyvault-managed-identity.md  teams-bot.md
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_sync_cursor.py  0003_sync_criteria.py  0004_oauth_token_store.py  0005_sync_profiles.py  0006_sync_exclusions.py
scripts/: send_test_contact.py
src/integration/: __init__.py
src/integration/api/: __init__.py  admin.py  deps.py  export.py  main.py  portal.py  portal_page.py
src/integration/canonical/: __init__.py  entities.py
src/integration/config/: __init__.py  mapping.py  settings.py  stages.py
src/integration/connectors/: __init__.py  autotask.py  base.py  ghl.py
src/integration/core/: __init__.py  circuit_breaker.py  http.py  idempotency.py  logging.py
tests/: conftest.py  fakes.py  test_classification_and_notes.py  test_companies.py  test_contacts_flow.py  test_criteria.py  test_deals_flow.py  test_environment.py  test_ghl_duplicates.py  test_linkage_and_conflicts.py  test_matching.py  test_mirrors_and_conversion.py  test_poller_and_notes_routing.py  test_portal_health.py  test_profiles.py  test_stage_map.py  test_teams_notify.py  test_webhook_signatures.py
(+32 files in other folders)
